--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy MkDocs site
+name: Deploy Design Log site
 
 on:
   push:
@@ -21,4 +21,6 @@ jobs:
           pip install -r requirements.txt
 
       - name: Deploy to GitHub Pages
+        working-directory: design-log
         run: mkdocs gh-deploy --force
+        
