second week updates

--- a/design-log/mkdocs.yml
+++ b/design-log/mkdocs.yml
@@ -7,15 +7,15 @@ theme:
   palette:
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: deep purple
-      accent: orange
+      primary: black
+      accent: deep purple
       toggle:
         icon: material/brightness-7
         name: Switch to light mode
     - media: "(prefers-color-scheme: light)"   
       scheme: default
-      primary: deep purple
-      accent: orange
+      primary: grey
+      accent: deep purple
       toggle:
         icon: octicons/moon-16
         name: Switch to dark mode
@@ -29,7 +29,7 @@ theme:
     - navigation.top
   icon:
     logo: fontawesome/solid/volleyball
-  favicon: images/ROBOT.png
+  favicon: images/onsetbot.png
 
 markdown_extensions:
   - admonition
@@ -49,6 +49,9 @@ markdown_extensions:
       pygments_lang_class: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
+  - pymdownx.saneheaders:
+  - pymdownx.fancylists:
+      inject_style: true
 
 
 plugins:
