partial week 3 updates

--- a/design-log/mkdocs.yml
+++ b/design-log/mkdocs.yml
@@ -68,7 +68,7 @@ nav:
     # - Week 06: logs/week-06.md
     # - Week 05: logs/week-05.md
     # - Week 04: logs/week-04.md
-    # - Week 03: logs/week-03.md
+    - Week 03: logs/week-03.md
     - Week 02: logs/week-02.md
     - Week 01: logs/week-01.md
       
