--- a/design-log/mkdocs.yml
+++ b/design-log/mkdocs.yml
@@ -63,8 +63,8 @@ nav:
   - Logs:
     # - Week 10: logs/week-10.md
     # - Week 09: logs/week-09.md
-    # - Week 08: logs/week-08.md
-    # - Week 07: logs/week-07.md
+    - Week 08: logs/week-08.md
+    - Week 07: logs/week-07.md
     - Week 06: logs/week-06.md
     - Week 05: logs/week-05.md
     - Week 04: logs/week-04.md
