--- a/design-log/mkdocs.yml
+++ b/design-log/mkdocs.yml
@@ -62,7 +62,7 @@ nav:
   - Home: index.md
   - Logs:
     # - Week 10: logs/week-10.md
-    # - Week 09: logs/week-09.md
+    - Week 09: logs/week-09.md
     - Week 08: logs/week-08.md
     - Week 07: logs/week-07.md
     - Week 06: logs/week-06.md
